--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
               Albany, NY 12205  <br>
               (518)-713-8666 <br>
               <a href = "mailto: JonathanMasih42@gmail.com" target="_blank">JonathanMasih42@gmail.com</a> <br>
-              <a href = "https://github.com/JonathanMasih" target="_blank">https://github.com/JonathanMasih</a>
+              <a href = "https://github.com/JonathanMasih" target="_blank">https://github.com/JonathanMasih</a><br>
+              <a href = "https://www.linkedin.com/in/jonathanmasih" target="_blank">https://www.linkedin.com/in/jonathanmasih</a>
+
        </p>  </div>
 
        <section>
